--- a/.github/workflows/test_database.yml
+++ b/.github/workflows/test_database.yml
@@ -18,7 +18,12 @@ jobs:
           POSTGRES_PASSWORD: changeme
         ports:
           - 5432:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+          --name db
 
     steps:
       - name: Checkout repository
@@ -31,9 +36,11 @@ jobs:
 
       - name: Install dependencies
         run: |
+          cd app
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Run tests
         run: |
+          cd app
           python manage.py test
