--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -6,7 +6,7 @@ on: [push]
 jobs:
     test-lint:
         name: Test and Lint
-        runs-on: ubuntu-20.04
+        runs-on: ubuntu-latest
         steps:
             - name: Login to Docker Hub
               uses: docker/login-action@v1
@@ -15,6 +15,14 @@ jobs:
                   password: ${{ secrets.DOCKERHUB_TOKEN }}
             - name: Checkout
               uses: actions/checkout@v2
+            - name: Set up Python
+              uses: actions/setup-python@v2
+              with:
+                python-version: 3.x
+            - name: Install dependencies
+              run: |
+                python -m pip install --upgrade pip
+                pip install -r requirements.txt
             - name: Test
               run: docker-compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
             - name: Lint
