--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -7,6 +7,21 @@ jobs:
     test-lint:
         name: Test and Lint
         runs-on: ubuntu-latest
+        services:
+          postgres:
+            image: postgres:13
+            env:
+              POSTGRES_DB: devdbtest
+              POSTGRES_USER: devuser
+              POSTGRES_PASSWORD: changeme
+            ports:
+              - 5432:5432
+            options: >-
+              --health-cmd pg_isready
+              --health-interval 10s
+              --health-timeout 5s
+              --health-retries 5
+              --name db
         steps:
             - name: Login to Docker Hub
               uses: docker/login-action@v1
@@ -15,14 +30,6 @@ jobs:
                   password: ${{ secrets.DOCKERHUB_TOKEN }}
             - name: Checkout
               uses: actions/checkout@v2
-            - name: Set up Python
-              uses: actions/setup-python@v2
-              with:
-                python-version: 3.x
-            - name: Install dependencies
-              run: |
-                python -m pip install --upgrade pip
-                pip install -r requirements.txt
             - name: Test
               run: docker-compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
             - name: Lint
