--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -30,17 +30,7 @@ jobs:
                   password: ${{ secrets.DOCKERHUB_TOKEN }}
             - name: Checkout
               uses: actions/checkout@v2
-            - name: Set up Python
-              uses: actions/setup-python@v2
-              with:
-                python-version: 3.x
-            - name: Install dependencies
-              run: |
-                python -m pip install --upgrade pip
-                pip install -r requirements.txt
             - name: Test
-              run: |
-                cd app
-                python manage.py test
+              run: docker-compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
             - name: Lint
               run: docker-compose run --rm app sh -c "flake8"
