--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -23,14 +23,24 @@ jobs:
               --health-retries 5
               --name db
         steps:
-            - name: Login to Docker Hub
-              uses: docker/login-action@v1
-              with:
-                  username: ${{ secrets.DOCKERHUB_USER }}
-                  password: ${{ secrets.DOCKERHUB_TOKEN }}
-            - name: Checkout
-              uses: actions/checkout@v2
-            - name: Test
-              run: docker-compose run --rm app sh -c "python manage.py test"
-            - name: Lint
-              run: docker-compose run --rm app sh -c "flake8"
+          - name: Login to Docker Hub
+            uses: docker/login-action@v1
+            with:
+                username: ${{ secrets.DOCKERHUB_USER }}
+                password: ${{ secrets.DOCKERHUB_TOKEN }}
+          - name: Checkout
+            uses: actions/checkout@v2
+          - name: Set up Python
+            uses: actions/setup-python@v2
+            with:
+              python-version: 3.x
+          - name: Install dependencies
+            run: |
+              python -m pip install --upgrade pip
+              pip install -r requirements.txt
+          - name: Test
+            run: |
+              cd app
+              python manage.py test
+          - name: Lint
+            run: docker-compose run --rm app sh -c "flake8"
