--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -9,7 +9,7 @@ jobs:
         runs-on: ubuntu-latest
         services:
           postgres:
-            image: postgres:13
+            image: postgres:16-alpine
             env:
               POSTGRES_DB: devdbtest
               POSTGRES_USER: devuser
@@ -21,7 +21,7 @@ jobs:
               --health-interval 10s
               --health-timeout 5s
               --health-retries 5
-              --name db
+
         steps:
           - name: Login to Docker Hub
             uses: docker/login-action@v1
@@ -33,12 +33,20 @@ jobs:
           - name: Set up Python
             uses: actions/setup-python@v2
             with:
-              python-version: 3.x
+              python-version: 3.12
           - name: Install dependencies
             run: |
               python -m pip install --upgrade pip
               pip install -r requirements.txt
+          - name: Waiting for PostgreSQL
+            run: |
+              until pg_isready -h postgres -p 5432; do
+                echo "Waiting for PostgreSQL to start..."
+                sleep 2
+              done
           - name: Test
+            env:
+              DB_HOST: postgres
             run: |
               cd app
               python manage.py test
